force-app/main/default/objects/Project__c/fields/Customer_Project__c.field-meta.xml
<CustomField>
    <fullName>Customer_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Project</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Project__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Customer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Vendor Projects</relationshipLabel>
    <relationshipName>Customer_Project</relationshipName>
    <type>Lookup</type>
</CustomField>