force-app/main/default/objects/Project__c/fields/GP__c.field-meta.xml
<CustomField>
    <fullName>GP__c</fullName>
    <description>this will calculate the Gross Profit on Customer Project</description>
    <formula>((Total_Project_Value__c - Total_Sum_of_Vendor_Projects__c)/Total_Project_Value__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>