force-app/main/default/objects/Project__c/fields/Last_Billing_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Billing_Date__c</fullName>
    <description>Used internally in trigger</description>
    <label>Last Billing Date</label>
    <type>Date</type>
</CustomField>