force-app/main/default/objects/Project__c/fields/Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term__c</fullName>
    <label>Payment Terms</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NET10</fullName>
            </value>
            <value>
                <fullName>NET30</fullName>
            </value>
            <value>
                <fullName>NET45</fullName>
            </value>
            <value>
                <fullName>NET60</fullName>
            </value>
            <value>
                <fullName>NET90</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>