force-app/main/default/objects/Project__c/fields/TIG_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>TIG_Entity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TIG Entity Name</label>
    <referenceTo>TIG_Entity__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>