force-app/main/default/objects/Project__c/fields/Total_Billed_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Billed_Value__c</fullName>
    <label>Total Billed Value</label>
    <summarizedField>Order__c.Total_Billed_Value__c</summarizedField>
    <summaryForeignKey>Order__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>