force-app/main/default/objects/Project__c/fields/Total_GP_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_GP_Amount__c</fullName>
    <formula>(Total_Project_Value__c - Total_Sum_of_Vendor_Projects__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total  Amount of a Customer Project - Total Amount of All Vendor Projects associated with a Customer Project</inlineHelpText>
    <label>Total GP Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>