force-app/main/default/objects/Project__c/fields/Total_IT_Billing_Entity__c.field-meta.xml
<CustomField>
    <fullName>Total_IT_Billing_Entity__c</fullName>
    <label>Total IT Billing Entity</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Total IT Consult LLP</fullName>
            </value>
            <value>
                <fullName>Total IT Consult Pty ltd</fullName>
            </value>
            <value>
                <fullName>TIC Netherlands B.V.</fullName>
            </value>
            <value>
                <fullName>Total IT Global UK Limited</fullName>
            </value>
            <value>
                <fullName>Total IT Global Sdn Bhd</fullName>
            </value>
            <value>
                <fullName>Total IT Consult Pte Ltd</fullName>
            </value>
            <value>
                <fullName>Total IT Global Pte Ltd</fullName>
            </value>
            <value>
                <fullName>Total IT Global NZ Ltd</fullName>
            </value>
            <value>
                <fullName>Total IT Global HK Ltd</fullName>
            </value>
            <value>
                <fullName>Total IT Global KK,Japan</fullName>
            </value>
            <value>
                <fullName>TIGM Global Computer Systems Services</fullName>
            </value>
            <value>
                <fullName>Total IT Global Inc.</fullName>
            </value>
            <value>
                <fullName>Total IT Consult DK ApS</fullName>
            </value>
            <value>
                <fullName>Total IT Global Finland OY</fullName>
            </value>
            <value>
                <fullName>TOTAL IT GLOBAL POLAND Sp. z o .o</fullName>
            </value>
            <value>
                <fullName>Total IT Global France</fullName>
            </value>
            <value>
                <fullName>Total IT Global Company Limited</fullName>
            </value>
            <value>
                <fullName>Total IT Germany GMBH</fullName>
            </value>
            <value>
                <fullName>Total IT Norway AS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>