force-app/main/default/objects/Project__c/fields/Total_PO_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_PO_Amount__c</fullName>
    <description>This will update the Total Purchase Order amount on Vendor Project in a given Fiscal Year and we&apos;re updating it by Apex</description>
    <inlineHelpText>Total Amount of Purchase Orders associated with a Vendor Project in a given Fiscal Year</inlineHelpText>
    <label>Total PO Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>