force-app/main/default/objects/Project__c/fields/Total_Sum_of_Vendor_Projects__c.field-meta.xml
<CustomField>
    <fullName>Total_Sum_of_Vendor_Projects__c</fullName>
    <description>fetch value automatically</description>
    <label>Total Sum of Vendor Projects</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>