force-app/main/default/objects/Project__c/fields/Total_Vendor_Projects_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Vendor_Projects_Amount__c</fullName>
    <description>This will update the Total Vendor Projects amount on Customer Project Layout in a given Fiscal Year and we&apos;re updating it by Apex</description>
    <inlineHelpText>Total Vendor Projects Amount  associated with a Customer Project in current Fiscal Year</inlineHelpText>
    <label>Total Vendor Projects Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>