force-app/main/default/objects/Project__c/fields/Type_of_Project__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Project__c</fullName>
    <label>Type of Project</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Workspace infrastructure</fullName>
            </value>
            <value>
                <fullName>Enterprise Infrastructure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>