force-app/main/default/objects/Project__c/fields/Vendor_status__c.field-meta.xml
<CustomField>
    <fullName>Vendor_status__c</fullName>
    <formula>TEXT(Customer__r.Status__c)</formula>
    <label>Vendor status</label>
    <type>Text</type>
</CustomField>