force-app/main/default/objects/Project__c/recordTypes/Indirect_Vendor.recordType-meta.xml
<RecordType>
    <fullName>Indirect_Vendor</fullName>
    <active>true</active>
    <label>Indirect Vendor</label>
</RecordType>