force-app/main/default/objects/Project__c/validationRules/ProjectDate.validationRule-meta.xml
<ValidationRule>
    <fullName>ProjectDate</fullName>
    <active>true</active>
    <description>Project start date is less than end date.</description>
    <errorConditionFormula>AND(ISNEW(),
NOT( Project_Start_Date__c &lt;  Project_End_Date__c )
)</errorConditionFormula>
    <errorMessage>Project start date should be less than end date.</errorMessage>
</ValidationRule>