force-app/main/default/objects/Project__c/validationRules/Start_and_End_Date_Cannot_be_Past_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_and_End_Date_Cannot_be_Past_Date</fullName>
    <active>true</active>
    <description>Start Date and End Date Can&apos;t be Past Date</description>
    <errorConditionFormula>AND(ISNEW(),
OR( Project_Start_Date__c &lt;  TODAY() ,
 Project_End_Date__c &lt; TODAY()
)
)</errorConditionFormula>
    <errorMessage>Project Start Date and End Date can&apos;t be any past date</errorMessage>
</ValidationRule>