force-app/main/default/objects/Project__c/validationRules/Vendor_Project_Start_and_End_Dates.validationRule-meta.xml
<ValidationRule>
    <fullName>Vendor_Project_Start_and_End_Dates</fullName>
    <active>true</active>
    <errorConditionFormula>Customer_Project__r.Project_Start_Date__c &gt;  Project_Start_Date__c ||  Customer_Project__r.Project_End_Date__c &lt;  Project_End_Date__c</errorConditionFormula>
    <errorMessage>Vendor Project dates should be within Customer Project Start and End dates</errorMessage>
</ValidationRule>