force-app/main/default/objects/Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Customer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>