force-app/main/default/objects/Project__c/listViews/AR_AP_Department_Head_Project.listView-meta.xml
<ListView>
    <fullName>AR_AP_Department_Head_Project</fullName>
    <filterScope>Queue</filterScope>
    <label>AR &amp; AP Department Head</label>
    <queue>AR_AP_Department_Head</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>