force-app/main/default/objects/Project__c/listViews/AR_AP_Department_Manager_Project.listView-meta.xml
<ListView>
    <fullName>AR_AP_Department_Manager_Project</fullName>
    <filterScope>Queue</filterScope>
    <label>AR &amp; AP Department Manager</label>
    <queue>AR_AP_Department_Manager</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>