force-app/main/default/objects/Project__c/listViews/Audit_Governance_Depart_Manager_Project.listView-meta.xml
<ListView>
    <fullName>Audit_Governance_Depart_Manager_Project</fullName>
    <filterScope>Queue</filterScope>
    <label>Audit &amp; Governance Depart Manager</label>
    <queue>Audit_Governance_Depart_Manager</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>