force-app/main/default/objects/Project__c/listViews/Audit_Governance_Department_Head_Project.listView-meta.xml
<ListView>
    <fullName>Audit_Governance_Department_Head_Project</fullName>
    <filterScope>Queue</filterScope>
    <label>Audit &amp; Governance Department Head</label>
    <queue>Audit_Governance_Department_Head</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>