force-app/main/default/objects/Project__c/listViews/Automation_Department_Head_Project.listView-meta.xml
<ListView>
    <fullName>Automation_Department_Head_Project</fullName>
    <filterScope>Queue</filterScope>
    <label>Automation Department Head</label>
    <queue>Automation_Department_Head</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>