force-app/main/default/objects/Project__c/listViews/Automation_Department_Manager_Project.listView-meta.xml
<ListView>
    <fullName>Automation_Department_Manager_Project</fullName>
    <filterScope>Queue</filterScope>
    <label>Automation Department Manager</label>
    <queue>Automation_Department_Manager</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>