force-app/main/default/objects/Project__c/listViews/C_Group_Project.listView-meta.xml
<ListView>
    <fullName>C_Group_Project</fullName>
    <filterScope>Queue</filterScope>
    <label>C Group</label>
    <queue>C_Group</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>