force-app/main/default/objects/Project__c/listViews/Department_Head_Project.listView-meta.xml
<ListView>
    <fullName>Department_Head_Project</fullName>
    <filterScope>Queue</filterScope>
    <label>IT Department Head</label>
    <queue>IT_Department_Head</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>