force-app/main/default/objects/Project__c/listViews/Field_Service_Management_Project.listView-meta.xml
<ListView>
    <fullName>Field_Service_Management_Project</fullName>
    <filterScope>Queue</filterScope>
    <label>Field Service Management</label>
    <queue>Field_Service_Management</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>