force-app/main/default/objects/Project__c/listViews/Finance_Executive_Project.listView-meta.xml
<ListView>
    <fullName>Finance_Executive_Project</fullName>
    <filterScope>Queue</filterScope>
    <label>Finance Executive</label>
    <queue>Finance_Executive</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>