force-app/main/default/objects/Project__c/listViews/Finance_Head_Project.listView-meta.xml
<ListView>
    <fullName>Finance_Head_Project</fullName>
    <filterScope>Queue</filterScope>
    <label>Finance Head</label>
    <queue>Finance_Head</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>