force-app/main/default/objects/Project__c/listViews/Finance_Manager_Project.listView-meta.xml
<ListView>
    <fullName>Finance_Manager_Project</fullName>
    <filterScope>Queue</filterScope>
    <label>Finance Manager</label>
    <queue>Finance_Manager</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>